# xfs-forensic

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: agheaders.rs  btree.rs  bytes.rs  crc.rs  dir.rs  error.rs  extent.rs  inode.rs  lib.rs  superblock.rs  vfs.rs
core/tests/: agheaders.rs  bigtime_dfvfs.rs  crafted_coverage.rs  crc.rs  dir.rs  dir_leaf.rs  extent.rs  extent_btree.rs  inode.rs  inode_convert.rs  superblock.rs  tier1_dfvfs.rs  vfs.rs
docs/: PRECODE-GAPS.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: lib.rs
forensic/tests/: f1_deleted.rs  f3_integrity.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: agheaders.rs  btree.rs  crc.rs  dir.rs  extent.rs  fuzz_forensic.rs  inode.rs  superblock.rs
supply-chain/: config.toml
tests/data/: README.md  content.ro.sha256  content.sha256  leaf.ls_i.txt  mkfs.v4.txt  mkfs.v5.txt  v4.agf0.txt  v4.agfl0.txt  v4.agi0.txt  v4.fls.txt  v4.fsstat.txt  v4.inode128.txt  v4.inode64.txt  v4.sb0.txt  v4.xfs_info.txt  v4dir.inode128.txt  v4dir.inode131.txt  v4dir.mkfs.txt  v5.agf0.txt  v5.agfl0.txt  v5.agi0.txt  v5.bmap_big.txt  v5.bmap_small.txt  v5.convert_agspan.txt  v5.convert_big.txt  v5.convert_root.txt  v5.derived.txt  v5.dir_block.txt  v5.dir_block_dblock.txt  v5.dir_leaf.txt  v5.dir_leaf_dblock0.txt  v5.dir_sf.txt  v5.fls.txt  v5.fsstat.txt  v5.inode128.txt  v5.inode64.txt  v5.inode_big.txt  v5.inode_small.txt  v5.inodes.txt  v5.sb0.txt  (+6 more)
