[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared (identical) by every member (DRY).
# `version` is NOT hoisted: core and forensic are versioned independently, so
# each keeps its own `version` inline.
#
# `rust-version` is the CI-verified MSRV floor. xfs-core's own code compiles as
# low as 1.75; the floor is dictated by a dependency, not our source. The
# batteries-included CRC32c decoder (`crc = "3"`) resolves to `crc 3.4.0`, which
# declares `rust-version = 1.83`, so a plain `cargo build -p xfs-core` (default
# resolution) fails below 1.83. Per the fleet library policy we keep the floor
# as low as the deps allow and verify it in the `msrv` CI job — rather than
# advertise 1.75 that default resolution cannot actually honour.
[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/xfs-forensic"
homepage = "https://github.com/SecurityRonin/xfs-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]
categories = ["parser-implementations", "filesystem"]
readme = "README.md"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `xfs-core` version
# lives here too, so a bump touches one line instead of every member.
[workspace.dependencies]
xfs-core = { path = "core", version = "0.1.2" }
forensicnomicon = "1"
thiserror = "2"
# CRC32c (Castagnoli / iSCSI polynomial) for v5 self-describing metadata.
crc = "3"
# forensic-vfs (KNOWLEDGE leaf) — the read-only FileSystem navigation contract the
# `vfs` feature adapts XfsFs onto. Published on crates.io (0.3 exposes the
# string-backed FsKind newtype re-exported from forensicnomicon-core: FsKind::XFS).
forensic-vfs = "0.7"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
correctness              = { level = "deny", priority = -1 }
suspicious               = { level = "deny", priority = -1 }
unwrap_used              = { level = "deny", priority = 0 }
expect_used              = { level = "deny", priority = 0 }
module_name_repetitions  = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap       = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
too_many_lines           = { level = "allow", priority = 1 }
items_after_statements   = { level = "allow", priority = 1 }
similar_names            = { level = "allow", priority = 1 }
manual_let_else          = { level = "allow", priority = 1 }
