[package]
name = "xfs-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust from-scratch XFS filesystem reader — superblock, AG headers, inodes, extents, directories, over any Read + Seek source"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/xfs-core"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "xfs", "filesystem", "dfir", "parser"]
categories.workspace = true
# Integration tests live under /tests and read fixtures from the repo-root
# tests/data via include_bytes!/env-gated paths, outside this package. They are
# repo-CI artifacts, not consumer-facing — excluding them keeps the published
# tarball self-contained.
exclude = ["/fuzz", "/.github", "/docs", "/tests"]

# The bare `xfs` crate name on crates.io is an abandoned 2016 perf-data parser
# (unrelated to the filesystem, not popular), so we take the import path `xfs`.
[lib]
name = "xfs"

[features]
# Adapt `XfsFs` to the forensic-vfs `FileSystem` trait (see `src/vfs.rs`) so an
# XFS volume composes as `Arc<dyn FileSystem>` in the forensic-vfs engine.
# Opt-in so a bare reader stays dependency-light; third-party consumers who only
# want the parser pay no forensic-vfs cost.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
# CRC32c verification for v5 self-describing metadata blocks.
crc = { workspace = true }
# forensic-vfs (KNOWLEDGE leaf) — the read-only FileSystem navigation contract.
# Optional; enabled by the `vfs` feature.
forensic-vfs = { workspace = true, optional = true }

[dev-dependencies]
# Independent content-hash oracle for the P3 Tier-1 gate: the reconstructed
# file bytes are hashed with a third-party SHA-256 and compared to the mount-ro
# ground truth. Test-only — never a production dependency of the reader.
sha2 = "0.10"

[lints]
workspace = true
