[package]
name = "xfs-core"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust from-scratch XFS filesystem reader — superblock, AG headers, inodes, extents, directories, over any Read + Seek source"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/xfs-core"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "xfs", "filesystem", "dfir", "parser"]
categories.workspace = true
# Integration tests live under /tests and read fixtures from the repo-root
# tests/data via include_bytes!/env-gated paths, outside this package. They are
# repo-CI artifacts, not consumer-facing — excluding them keeps the published
# tarball self-contained.
# `/tests` already keeps the whole integration-test tree (incl. tests/data) out
# of the tarball; the explicit `*.raw`/`*.img` globs are belt-and-suspenders so a
# committed 16 MiB oracle image (tests/data/xfs_dfvfs.raw) can never sneak into
# the published `.crate` and breach the ~10 MiB crates.io limit.
exclude = [
    "/fuzz",
    "/.github",
    "/docs",
    "/tests",
    "/tests/data/*.raw",
    "/tests/data/*.img",
]

# The bare `xfs` crate name on crates.io is an abandoned 2016 perf-data parser
# (unrelated to the filesystem, not popular), so we take the import path `xfs`.
[lib]
name = "xfs"

[features]
# Adapt `XfsFs` to the forensic-vfs `FileSystem` trait (see `src/vfs.rs`) so an
# XFS volume composes as `Arc<dyn FileSystem>` in the forensic-vfs engine.
# Opt-in so a bare reader stays dependency-light; consumers who only want the
# parser pay no forensic-vfs cost.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
# CRC32c verification for v5 self-describing metadata blocks.
crc = { workspace = true }
# forensic-vfs (KNOWLEDGE leaf) — the read-only FileSystem navigation contract
# the `vfs` feature adapts XfsFs onto. Optional; enabled by the `vfs` feature.
forensic-vfs = { workspace = true, optional = true }

[dev-dependencies]
# Independent content-hash oracle for the P3 Tier-1 gate: the reconstructed
# file bytes are hashed with a third-party SHA-256 and compared to the mount-ro
# ground truth. Test-only — never a production dependency of the reader.
sha2 = "0.10"

[lints]
workspace = true
