[package]
name = "xfs-forensic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forensic anomaly auditor for XFS — deleted-inode recovery, directory-slack residue, v5 CRC/self-describing integrity as graded report::Finding, built on xfs-core"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/xfs-forensic"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "xfs", "dfir", "carving", "anti-forensics"]
categories.workspace = true
# Keep the repo-root integration-test tree and its committed 16 MiB oracle image
# (tests/data/xfs_dfvfs.raw, Apache-2.0) out of the published `.crate`, so the
# tarball stays well under the ~10 MiB crates.io limit.
exclude = [
    "/fuzz",
    "/.github",
    "/docs",
    "/tests",
    "/tests/data/*.raw",
    "/tests/data/*.img",
]

[dependencies]
xfs-core = { workspace = true }
# XFS structure knowledge + the shared report model (Severity/Observation).
forensicnomicon = { workspace = true }

[dev-dependencies]
# Independent content-hash oracle for the F1 carve gate: carved deleted-file
# bytes are hashed and compared to the mount-ro ground truth. Test-only.
sha2 = "0.10"

[lints]
workspace = true
